// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulletList renders correctly  1`] = `
<DocumentFragment>
  .cache-7078ng-Steps {
  list-style: none;
  padding-left: 16px;
  margin-top: 24px;
  text-align: left;
  font-size: 16px;
}

.cache-z01g5q-Step {
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1da3zhe-Chip {
  display: inline-block;
  min-width: 24px;
  height: 24px;
  border-radius: 12px;
  background-color: #4a4f62;
  color: #ffffff;
  margin-right: 8px;
  text-align: center;
  font-weight: 600;
}

.cache-1talnks-StyledDiv {
  width: 100%;
}

<ul
    class="cache-7078ng-Steps e12g85273"
  >
    <li
      class="cache-z01g5q-Step e12g85272"
    >
      <span
        class="cache-1da3zhe-Chip e12g85271"
      >
        1
      </span>
      <div
        class="cache-1talnks-StyledDiv e12g85270"
      >
        <div>
          a
        </div>
      </div>
    </li>
    <li
      class="cache-z01g5q-Step e12g85272"
    >
      <span
        class="cache-1da3zhe-Chip e12g85271"
      >
        2
      </span>
      <div
        class="cache-1talnks-StyledDiv e12g85270"
      >
        <div>
          b
        </div>
      </div>
    </li>
    <li
      class="cache-z01g5q-Step e12g85272"
    >
      <span
        class="cache-1da3zhe-Chip e12g85271"
      >
        3
      </span>
      <div
        class="cache-1talnks-StyledDiv e12g85270"
      >
        <div>
          c
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`BulletList renders correctly with custom keyPrefix 1`] = `
<DocumentFragment>
  .cache-7078ng-Steps {
  list-style: none;
  padding-left: 16px;
  margin-top: 24px;
  text-align: left;
  font-size: 16px;
}

.cache-z01g5q-Step {
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1da3zhe-Chip {
  display: inline-block;
  min-width: 24px;
  height: 24px;
  border-radius: 12px;
  background-color: #4a4f62;
  color: #ffffff;
  margin-right: 8px;
  text-align: center;
  font-weight: 600;
}

.cache-1talnks-StyledDiv {
  width: 100%;
}

<ul
    class="cache-7078ng-Steps e12g85273"
  >
    <li
      class="cache-z01g5q-Step e12g85272"
    >
      <span
        class="cache-1da3zhe-Chip e12g85271"
      >
        1
      </span>
      <div
        class="cache-1talnks-StyledDiv e12g85270"
      >
        <div>
          a
        </div>
      </div>
    </li>
    <li
      class="cache-z01g5q-Step e12g85272"
    >
      <span
        class="cache-1da3zhe-Chip e12g85271"
      >
        2
      </span>
      <div
        class="cache-1talnks-StyledDiv e12g85270"
      >
        <div>
          b
        </div>
      </div>
    </li>
    <li
      class="cache-z01g5q-Step e12g85272"
    >
      <span
        class="cache-1da3zhe-Chip e12g85271"
      >
        3
      </span>
      <div
        class="cache-1talnks-StyledDiv e12g85270"
      >
        y
      </div>
    </li>
    <li
      class="cache-z01g5q-Step e12g85272"
    >
      <span
        class="cache-1da3zhe-Chip e12g85271"
      >
        4
      </span>
      <div
        class="cache-1talnks-StyledDiv e12g85270"
      >
        <div>
          c
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepTitle renders correctly  1`] = `
<DocumentFragment>
  .cache-1ri5xvh {
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #151a2d;
}

.cache-1ktcim9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-1kbqic1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 16px;
  font-size: 24px;
}

<div
    class="cache-1ri5xvh e17jwwhf1"
  >
    <div
      class="cache-1ktcim9 e1u3ywq30"
    >
      1
    </div>
    <div
      class="cache-1kbqic1 e17jwwhf0"
    >
      Item 1
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepTitle renders correctly with custom keyPrefix 1`] = `
<DocumentFragment>
  .cache-1ri5xvh {
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #151a2d;
}

.cache-1ktcim9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-1kbqic1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 16px;
  font-size: 24px;
}

<div
    class="cache-1ri5xvh e17jwwhf1"
  >
    <div
      class="cache-1ktcim9 e1u3ywq30"
    >
      1
    </div>
    <div
      class="cache-1kbqic1 e17jwwhf0"
    >
      Item 1
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepTitle renders correctly with disabled state 1`] = `
<DocumentFragment>
  .cache-baod9r {
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b2b6c3;
}

.cache-ln3rwk {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #b2b6c3;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-1kbqic1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 16px;
  font-size: 24px;
}

<div
    class="cache-baod9r e17jwwhf1"
  >
    <div
      class="cache-ln3rwk e1u3ywq30"
    >
      1
    </div>
    <div
      class="cache-1kbqic1 e17jwwhf0"
    >
      <div>
        Item 1 with disabled state
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepTitle renders correctly with small size 1`] = `
<DocumentFragment>
  .cache-1ri5xvh {
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #151a2d;
}

.cache-cyicbw {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 24px;
  height: 24px;
  font-size: 14px;
}

.cache-4vid3f {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 8px;
  font-size: 16px;
}

<div
    class="cache-1ri5xvh e17jwwhf1"
  >
    <div
      class="cache-cyicbw e1u3ywq30"
    >
      1
    </div>
    <div
      class="cache-4vid3f e17jwwhf0"
    >
      Item 1 small
    </div>
  </div>
</DocumentFragment>
`;
